# Polling

./: ALSU.circ  CMakeLists.txt  CS251_Branches.circ  CS251_MainHERA.circ  CS251_RegisterBank.circ  HERA_main.cpp  PC_insturctions.circ  README.md  polling_basics-data.hera  polling_basics.hera  polling_basics.hera.lcode  polling_basics.hera.lst
